--- a/src/App.css
+++ b/src/App.css
@@ -1,86 +1,38 @@
-/* src/App.css */
-.dashboard {
-  display: flex;
-  flex-direction: column;
-}
-
-.banners {
-  display: flex;
-  justify-content:space-around;
-  cursor: pointer;
-  margin: 20px;
-  
-}
-.banners a{
-  display: flex;
-  justify-content: center;
+.App {
   text-align: center;
-  border-left:5px solid rgb(0, 255, 234);
 }
 
-.banner {
-background-color: rgb(239, 149, 84);
- border-radius: 5px;
- border: none;
-  padding: 10px;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.sections {
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
-  
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-.section {
- 
-  padding: 10px;
-  margin-bottom: 20px;
-}
-
-.cards {
-  margin: 3rem;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 5rem;
-  cursor: pointer;
-  
-}
-
-.card {
-  border: 1px solid #ccc;
-  padding: 10px;
-  border-radius: 5px;
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: none;
-  
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.card.progress p {
-  margin: 0;
+.App-link {
+  color: #61dafb;
 }
 
-.card.number p {
-  margin: 0;
-}
-
-.card.text p {
-  margin: 0;
-  white-space: pre-wrap;
-}
-
-.card.tags p {
-  margin: 0;
-}
-
-.button {
-  display: block;
-  margin-top: 10px;
-}
-
-.link {
-  display: block;
-  margin-top: 10px;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
